# AudioWatch

./: .env.example  .gitignore  PLANNING.md  README.md  config.example.yaml  pyproject.toml
docs/: phase4-scheduler.md  phase5-dashboard.md
scripts/: analyze_headfi.py
src/audiowatch/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/audiowatch/dashboard/: __init__.py  app.py  db.py
src/audiowatch/dashboard/pages/: analytics.py  listings.py  notifications.py  overview.py  rules.py
src/audiowatch/database/: __init__.py  models.py  repository.py
src/audiowatch/matcher/: __init__.py  evaluator.py  parser.py
src/audiowatch/notifier/: __init__.py  base.py  discord.py  email.py
src/audiowatch/scheduler/: __init__.py
src/audiowatch/scraper/: __init__.py  headfi.py  models.py
tests/: conftest.py
