[project]
name = "audiowatch"
version = "0.1.0"
description = "Monitor Head-Fi.org classifieds and get notified when items matching your criteria are listed"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Zi-Deng", email = "dengzikang@gmail.com" }
]
keywords = ["head-fi", "classifieds", "monitor", "notifications", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "typer>=0.12",
    "rich>=13.0",

    # Scraping
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "httpx>=0.27",

    # Database
    "duckdb>=1.0",
    "duckdb-engine>=0.13",
    "sqlalchemy>=2.0",

    # Scheduling
    "apscheduler>=3.10",

    # Notifications
    "discord-webhook>=1.3",

    # Dashboard
    "streamlit>=1.40",
    "plotly>=5.20",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.scripts]
audiowatch = "audiowatch.cli:app"

[project.urls]
Homepage = "https://github.com/Zi-Deng/AudioWatch"
Repository = "https://github.com/Zi-Deng/AudioWatch"
Issues = "https://github.com/Zi-Deng/AudioWatch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiowatch"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["audiowatch"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "discord_webhook.*",
    "apscheduler.*",
    "streamlit.*",
    "duckdb.*",
    "bs4.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/audiowatch"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
